# apicol

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/prd/: BACKLOG.md  PRD-001-architecture-deux-niveaux.md  PRD-002-separation-claude-cli.md  PRD-003-multi-backend-simultane.md  PRD-004-backend-openai-compatible.md  PRD-005-streaming.md
docs/superpowers/plans/: 2026-05-14-apicol-v0.1.md  2026-06-19-streaming.md
docs/superpowers/specs/: 2026-05-14-apicol-v0.1-design.md
src/apicol/: __init__.py  _client.py  _config.py  _errors.py  _route.py
src/apicol/_backends/: __init__.py  anthropic.py  claude_cli.py  litellm.py  openai_compatible.py
tests/: conftest.py
tests/integration/: conftest.py  test_anthropic_live.py  test_claude_cli_live.py  test_litellm_live.py
tests/property/: test_config_parsing.py  test_message_flattening.py  test_openai_anthropic_codec.py
tests/unit/: test_anthropic_backend.py  test_backends_common.py  test_claude_cli_backend.py  test_client.py  test_config.py  test_errors.py  test_global_wrappers.py  test_litellm_backend.py  test_openai_compatible_backend.py  test_route.py  test_smoke.py
