[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apicol"  # à remplacer par le nom définitif
version = "0.1.0"
description = "Couche d'abstraction multi-backend pour appels LLM : Anthropic natif, LiteLLM (OpenAI/Gemini/Ollama/vLLM/OpenRouter), claude -p dev-only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }  # à confirmer
authors = [
    { name = "JP" },
]
keywords = ["llm", "anthropic", "openai", "litellm", "abstraction", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",     # SDK natif pour le backend Anthropic et le niveau 2
    "litellm>=1.50.0",       # délégation pour tous les autres backends
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/jp/apicol"          # à remplacer
Repository = "https://github.com/jp/apicol"         # à remplacer
Issues = "https://github.com/jp/apicol/issues"      # à remplacer
Changelog = "https://github.com/jp/apicol/blob/main/CHANGELOG.md"  # à remplacer

# ─── Hatch ────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/apicol"]

# ─── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

# ─── mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# ─── pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real LLM APIs (require API keys)",
    "requires_claude_cli: tests that require the `claude` CLI in PATH",
]

[tool.coverage.run]
source = ["src/apicol"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
