[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apicol"
version = "0.3.0"
description = "Couche d'abstraction multi-backend pour appels LLM : Anthropic natif, OpenAI-compatible (Ollama/vLLM/OpenRouter/...), LiteLLM (Gemini/Bedrock/Vertex/Azure), claude -p dev-only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sandjab" },
]
keywords = ["llm", "anthropic", "openai", "litellm", "abstraction", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",     # SDK natif pour le backend Anthropic et le niveau 2
    "openai>=1.50.0",        # SDK officiel pour le backend openai-compatible
    "litellm>=1.50.0",       # délégation pour les providers natifs exotiques (Gemini, Bedrock, Vertex, Azure, Cohere)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/Sandjab/apicol"
Repository = "https://github.com/Sandjab/apicol"
Issues = "https://github.com/Sandjab/apicol/issues"
Changelog = "https://github.com/Sandjab/apicol/blob/main/CHANGELOG.md"

# ─── Hatch ────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/apicol"]

# ─── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

# ─── mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# ─── pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real LLM APIs (require API keys)",
    "anthropic_live: requires ANTHROPIC_API_KEY",
    "openai_live: requires OPENAI_API_KEY",
    "requires_claude_cli: requires `claude` CLI in PATH",
]

[tool.coverage.run]
source = ["src/apicol"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
